<resources>
    <string name="app_name">ForestBug</string>
    <string name="menu_title">ForestBug</string>
    <string name="select_level">Select Level</string>
    <string name="level_1">1</string>
    <string name="level_2">2</string>
    <string name="level_3">3</string>
    <string name="level_4">4</string>
    <string name="level_5">5</string>
    <string name="menu">Menu</string>
    <string name="restart">Restart</string>
    <string name="pause_description">Pause</string>
    <string name="resume_description">Resume</string>
</resources>
